PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite  (Git)

pts-core: Don't show Vulkan options if Vulkan support is known to be unavailable/broken
pts-core: Add OptionSelect tag support within test suite definitions
pts-core: Allow * wildcard match in FileCheck handling within external dependency XML
pts-core: Add "OS" TestType
pts-core: Various external dependency updates
pts-core: Continued tweaking to the analytics engine
phodevi: Add Neoverse N2, Cortex-X1 detection and other Arm CPU updates
pts_Graph: Various improvements

Phoronix Test Suite 10.0.0 Milestone 2
12 September 2020

pts-core: Honor NO_COLOR environment variable for disabling terminal coloring
pts-core: Allow launching just the result viewer from systemd (phoronix-result-server.service)
pts-core: Result viewer UI tweaks
pts-core: Minor fixes
pts-core: Add RequiresRootInstall test profile option
pts-core: Result file text output tweaks
pts-core: More robust test result parsing in certain time formats

Phoronix Test Suite 10.0.0 Milestone 1
19 August 2020

pts-core: Add keep-results-in-result-file sub-command
pts-core: Split the dynamic result viewer into its own embed class for result file handling to allow for easy re-use by OpenBenchmarking, Phoromatic, etc
pts-core: Various changes for supporting the new OpenBenchmarking.org infrastructure
pts_Graph: Add histogram type
phodevi: CPU core name / family detection to friendly strings (OpenBenchmarking.org driven)
phodevi: Report core name via system-info command
phodevi: Various storage HDD/SSD detection reporting improvements
phodevi: Ampere Altra detection
phodevi: macOS/Apple hardware detection improvements

Phoronix Test Suite 9.8.0
9 July 2020

pts-core: Handling of cases where all options are unsupported (such as CUDA and OpenCL tests with no valid backends found) to avoid prompts
pts-core: Be more liberal in allowing CUDA/OpenCL GPU compute tests to run fine without display server active