@@ -946,6 +946,9 @@ In the event that a test profile fails to install or run, the following general 
 <h3>All Tests In Pts<em>  pts/all</em>
 </h3>
 <p>This is a collection of all supported test profiles found within the specified OpenBenchmarking.org repository.</p>
+<h3>Application Tests<em>  pts/application</em>
+</h3>
+<p>This is a collection of test profiles found within the specified OpenBenchmarking.org repository where the test profile is specified as being a application software test.</p>
 <h3>Benchmark Tests<em>  pts/benchmark</em>
 </h3>
 <p>This is a collection of test profiles found within the specified OpenBenchmarking.org repository where the test profile is specified as being a benchmark software test.</p>
@@ -1006,6 +1009,9 @@ In the event that a test profile fails to install or run, the following general 
 <h3>Openmpi Tests<em>  pts/openmpi</em>
 </h3>
 <p>This is a collection of test profiles found within the specified OpenBenchmarking.org repository where the test profile is specified via an internal tag as testing openmpi.</p>
+<h3>Os Subsystem Tests<em>  pts/os</em>
+</h3>
+<p>This is a collection of test profiles found within the specified OpenBenchmarking.org repository where the test profile is specified as being a test of the os sub-system.</p>
 <h3>Processor Subsystem Tests<em>  pts/processor</em>
 </h3>
 <p>This is a collection of test profiles found within the specified OpenBenchmarking.org repository where the test profile is specified as being a test of the processor sub-system.</p>
@@ -1072,6 +1078,9 @@ In the event that a test profile fails to install or run, the following general 
 <h3>All Tests In System<em>  system/all</em>
 </h3>
 <p>This is a collection of all supported test profiles found within the specified OpenBenchmarking.org repository.</p>
+<h3>Application Tests<em>  system/application</em>
+</h3>
+<p>This is a collection of test profiles found within the specified OpenBenchmarking.org repository where the test profile is specified as being a application software test.</p>
 <h3>Benchmark Tests<em>  system/benchmark</em>
 </h3>
 <p>This is a collection of test profiles found within the specified OpenBenchmarking.org repository where the test profile is specified as being a benchmark software test.</p>
@@ -1108,6 +1117,9 @@ In the event that a test profile fails to install or run, the following general 
 <h3>Network Subsystem Tests<em>  system/network</em>
 </h3>
 <p>This is a collection of test profiles found within the specified OpenBenchmarking.org repository where the test profile is specified as being a test of the network sub-system.</p>
+<h3>OpenCV Tests<em>  system/opencv</em>
+</h3>
+<p>This is a collection of test profiles having an external dependency on OpenCV</p>
 <h3>OpenMPI Tests<em>  system/openmpi</em>
 </h3>
 <p>This is a collection of test profiles having an external dependency on OpenMPI</p>
@@ -1117,6 +1129,9 @@ In the event that a test profile fails to install or run, the following general 
 <h3>Python Tests<em>  system/python</em>
 </h3>
 <p>This is a collection of test profiles having an external dependency on Python</p>
+<h3>Scientific Tests<em>  system/scientific</em>
+</h3>
+<p>This is a collection of test profiles found within the specified OpenBenchmarking.org repository where the test profile is specified as being a scientific software test.</p>
 <h3>Solaris Operating System Tests<em>  system/solaris</em>
 </h3>
 <p>This is a collection of test profiles found within the specified OpenBenchmarking.org repository where the test profile is specified as being compatible with the solaris Operating System.</p>
@@ -1165,39 +1180,6 @@ In the event that a test profile fails to install or run, the following general 
 <h3>Smp Tests<em>  git/smp</em>
 </h3>
 <p>This is a collection of test profiles found within the specified OpenBenchmarking.org repository where the test profile is specified via an internal tag as testing smp.</p>
-<h3>All Tests In Windows<em>  windows/all</em>
-</h3>
-<p>This is a collection of all supported test profiles found within the specified OpenBenchmarking.org repository.</p>
-<h3>Benchmark Tests<em>  windows/benchmark</em>
-</h3>
-<p>This is a collection of test profiles found within the specified OpenBenchmarking.org repository where the test profile is specified as being a benchmark software test.</p>
-<h3>Bsd Operating System Tests<em>  windows/bsd</em>
-</h3>
-<p>This is a collection of test profiles found within the specified OpenBenchmarking.org repository where the test profile is specified as being compatible with the bsd Operating System.</p>
-<h3>Everything In Windows<em>  windows/everything</em>
-</h3>
-<p>This is a collection of all test profiles found within the specified OpenBenchmarking.org repository, including unsupported tests, etc.</p>
-<h3>Linux Operating System Tests<em>  windows/linux</em>
-</h3>
-<p>This is a collection of test profiles found within the specified OpenBenchmarking.org repository where the test profile is specified as being compatible with the linux Operating System.</p>
-<h3>Macosx Operating System Tests<em>  windows/macosx</em>
-</h3>
-<p>This is a collection of test profiles found within the specified OpenBenchmarking.org repository where the test profile is specified as being compatible with the macosx Operating System.</p>
-<h3>Processor Subsystem Tests<em>  windows/processor</em>
-</h3>
-<p>This is a collection of test profiles found within the specified OpenBenchmarking.org repository where the test profile is specified as being a test of the processor sub-system.</p>
-<h3>Solaris Operating System Tests<em>  windows/solaris</em>
-</h3>
-<p>This is a collection of test profiles found within the specified OpenBenchmarking.org repository where the test profile is specified as being compatible with the solaris Operating System.</p>
-<h3>System Subsystem Tests<em>  windows/system</em>
-</h3>
-<p>This is a collection of test profiles found within the specified OpenBenchmarking.org repository where the test profile is specified as being a test of the system sub-system.</p>
-<h3>Utility Tests<em>  windows/utility</em>
-</h3>
-<p>This is a collection of test profiles found within the specified OpenBenchmarking.org repository where the test profile is specified as being a utility software test.</p>
-<h3>Windows Operating System Tests<em>  windows/windows</em>
-</h3>
-<p>This is a collection of test profiles found within the specified OpenBenchmarking.org repository where the test profile is specified as being compatible with the windows Operating System.</p>
 <hr style="height: 50px; border: 0;"><a name="ComponentTesting"></a><h1>Component Testing</h1>
 <h1>Compiler Testing &amp; Masking</h1>
 <p>A majority of the test profiles provided by OpenBenchmarking.org to the Phoronix Test Suite are source-based tests. Relying upon the upstream source-code for each program under test allows for the tests to be easily brought to new platforms and architectures, avoids any out-of-tree / non-default packaging differences by different distributions and operating systems, and to allow the Phoronix Test Suite user to easily test new compilers and/or compiler options. For the source-based tests, the Phoronix Test Suite relies upon a compiler (e.g. GCC, LLVM/Clang, Sun Studio, Open64, et al) being present on the system under test. The Phoronix Test Suite does respect <em>CC/CXX</em> environment variables and test profiles are expected to honor <em>CFLAGS/CXXFLAGS</em> and other compiler settings.</p>
