@@ -1,6 +1,7 @@
 PHORONIX TEST SUITE CHANGE-LOG
 
-Phoronix Test Suite  (Git)
+Phoronix Test Suite  10.0.0 Milestone 3
+1 October 2020
 
 pts-core: Don't show Vulkan options if Vulkan support is known to be unavailable/broken
 pts-core: Add OptionSelect tag support within test suite definitions
